<resources>
    <string name="app_name">MyQRScanner</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_register">register</string>
    <string name="Register_txt">Already have an account?Login here</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Reset_txt">Forgot Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="splash_screen_subtitle">QR code Scanner</string>
    <string name="menu_checkbox_undo">Undo</string>
    <string name="menu_add_5_items">Add 5 items</string>
    <string name="button_undo">undo</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">Click below</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="crash_toast_text">Kindly email me the logs.</string>

    <string name="google_maps_key">AIzaSyBvOG781asaT-15lwLB8qpRENFQrodby6w</string>
</resources>
