<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.goa.qrscanner.LoginActivity"
    >
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="147dp"
        android:src="@drawable/logo" />



    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/etxt__color"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColor="@color/etxt__color"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:background="@color/btn_color"
            android:text="@string/action_sign_in"
            android:textColor="@color/txt_color"
            android:textStyle="bold"
            tools:ignore="OnClick" />
        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Login"-->
            <!--android:id="@+id/login"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:background="#D44500"-->
            <!--android:textColor="@color/authui_inputTextColor"-->
            <!--android:textColorLink="?attr/actionMenuTextColor"-->
            <!--tools:background="#D44500" />-->

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/Register_txt"
                />

        </LinearLayout>


    </LinearLayout>

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--android:id="@+id/image"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="200dp"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:layout_gravity="center"-->
        <!--android:paddingBottom="0dp"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:src="@drawable/loginpage" />-->

    <!--<EditText-->
        <!--android:id="@+id/edit_text_email"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:alpha="0.5"-->
        <!--android:fontFamily="sans-serif"-->
        <!--android:gravity="center"-->
        <!--android:hint="Enter your email"-->
        <!--android:inputType="textEmailAddress"-->
        <!--android:nextFocusDown="@+id/edit_text_password"-->
        <!--android:padding="10dp"-->
        <!--android:textColor="#0D1D37"-->
        <!--android:textSelectHandle="@drawable/cursor"-->
        <!--android:textSize="18sp" />-->

    <!--<EditText-->
        <!--android:id="@+id/edit_text_password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:alpha="0.5"-->
        <!--android:fontFamily="sans-serif"-->
        <!--android:gravity="center"-->
        <!--android:hint="Enter your password"-->
        <!--android:imeOptions="actionDone"-->
        <!--android:inputType="textPassword"-->
        <!--android:padding="10dp"-->
        <!--android:textColor="#0D1D37"-->
        <!--android:textSelectHandle="@drawable/cursor"-->
        <!--android:textSize="18sp"-->
        <!--tools:inputType="textPassword|numberPassword" />-->


    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Sign Up"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:id="@+id/button"-->
        <!--android:gravity="center"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:background="#0D1D37"-->
        <!--android:textColor="@color/authui_inputTextColor"-->
        <!--/>-->


    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Already have an account ?"-->
        <!--android:textSize="18sp"-->
        <!--android:id="@+id/login"-->
        <!--android:layout_marginTop="46dp"-->
        <!--android:layout_below="@+id/button"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:textColor="#0D1D37" />-->


    <!--<Button-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Login"-->
        <!--android:id="@+id/login"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:layout_below="@+id/loginTV"-->
        <!--android:background="#D44500"-->
        <!--android:textColor="@color/authui_inputTextColor"-->
        <!--android:textColorLink="?attr/actionMenuTextColor"-->
        <!--tools:background="#D44500" />-->


